script/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-nginx-deployment
  labels:
    app: fe-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fe-nginx
  template:
    metadata:
      labels:
        app: fe-nginx
    spec:
      containers:
      - name: fe-nginx
        image: jnuho/fe-nginx:latest
        #imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
      #imagePullSecrets:
      #- name: regcred
