script/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-nginx-service
spec:
  selector:
    app: fe-nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      #nodePort: 35010
  #type: LoadBalancer
  type: ClusterIP
  #type: NodePort
