script/dry-run-prd-L4.yaml
NAME: tst-release
LAST DEPLOYED: Sun Jul 14 16:29:23 2024
NAMESPACE: default
STATUS: pending-install
REVISION: 1
TEST SUITE: None
HOOKS:
MANIFEST:
---
# Source: tst-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-nginx-service
  labels:
    app: fe-nginx
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-type: external
  annotations:
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8080
      targetPort: 80
      protocol: TCP
  selector:
    app: fe-nginx
---
# Source: tst-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-go-service
  labels:
    app: be-go
  annotations:
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
  selector:
    app: be-go
---
# Source: tst-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-py-service
  labels:
    app: be-py
  annotations:
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3002
      targetPort: 3002
      protocol: TCP
  selector:
    app: be-py
---
# Source: tst-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-nginx
  labels:
    app: fe-nginx
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: fe-nginx
  template:
    metadata:
      labels:
        app: fe-nginx
    spec:
      containers:
        - name: fe-nginx
          image: "jnuho/fe-nginx:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - mountPath: /config
              name: config-volume
      volumes:
        - configMap:
            name: application-settings
          name: config-volume
---
# Source: tst-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-go
  labels:
    app: be-go
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: be-go
  template:
    metadata:
      labels:
        app: be-go
    spec:
      containers:
        - name: be-go
          image: "jnuho/be-go:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
---
# Source: tst-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-py
  labels:
    app: be-py
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: be-py
  template:
    metadata:
      labels:
        app: be-py
    spec:
      containers:
        - name: be-py
          image: "jnuho/be-py:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3002
              protocol: TCP
---
# Source: tst-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-nginx-ingress
  labels:
    helm.sh/chart: tst-chart-0.1.0
    app.kubernetes.io/name: tst-chart
    app.kubernetes.io/instance: tst-release
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=prd,Team=devops
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fe-nginx-service
                port:
                  number: 8080
          - path: /web/cat
            pathType: Prefix
            backend:
              service:
                name: be-go-service
                port:
                  number: 3001
          - path: /weather
            pathType: Prefix
            backend:
              service:
                name: be-go-service
                port:
                  number: 3001
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: be-go-service
                port:
                  number: 3001
