script/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # This field is used to specify the class of the Ingress. The Ingress class is used by the Ingress Controller to determine whether or not it should act on a particular Ingress resource. For example, if you have multiple Ingress Controllers running in your cluster, you can use the ingressClassName field to specify which Ingress Controller should handle this Ingress12.
  ingressClassName: nginx
  rules:
  - host: localhost
  #- host: "simple-app.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fe-nginx-service
            port:
              number: 8080
      - path: /web/cat
        pathType: Prefix
        backend:
          service:
            name: be-go-service
            port:
              number: 3001
